@@ -1,36 +1,32 @@
 package carpet.logging;
 
 import carpet.CarpetServer;
+import carpet.fakes.MinecraftServerInterface;
 import carpet.helpers.HopperCounter;
-import carpet.helpers.TickSpeed;
+import carpet.helpers.ServerTickRateManager;
 import carpet.logging.logHelpers.PacketCounter;
 import carpet.utils.Messenger;
 import carpet.utils.SpawnReporter;
-import io.netty.buffer.Unpooled;
-import net.minecraft.network.FriendlyByteBuf;
-import net.minecraft.network.chat.BaseComponent;
-import net.minecraft.network.chat.TextComponent;
+import net.minecraft.network.chat.Component;
 import net.minecraft.network.protocol.game.ClientboundTabListPacket;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.util.Mth;
-import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.level.Level;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.OptionalDouble;
 import java.util.Set;
 import java.util.function.Consumer;
 
 public class HUDController
 {
-    private static List<Consumer<MinecraftServer>> HUDListeners = new ArrayList<>();
+    private static final List<Consumer<MinecraftServer>> HUDListeners = new ArrayList<>();
 
     /**
      * Adds listener to be called when HUD is updated for logging information
@@ -41,18 +37,18 @@ public class HUDController
         HUDListeners.add(listener);
     }
 
-    public static Map<ServerPlayer, List<BaseComponent>> player_huds = new HashMap<>();
+    public static final Map<ServerPlayer, List<Component>> player_huds = new HashMap<>();
 //keyed with player names so unlogged players don't hold the reference
-    public static final Map<String, BaseComponent> scarpet_headers = new HashMap<>();
+    public static final Map<String, Component> scarpet_headers = new HashMap<>();
 
-    public static final Map<String, BaseComponent> scarpet_footers = new HashMap<>();
+    public static final Map<String, Component> scarpet_footers = new HashMap<>();
 
     public static void resetScarpetHUDs() {
         scarpet_headers.clear();
         scarpet_footers.clear();
     }
 
-    public static void addMessage(ServerPlayer player, BaseComponent hudMessage)
+    public static void addMessage(ServerPlayer player, Component hudMessage)
     {
         if (player == null) return;
         if (!player_huds.containsKey(player))
@@ -61,17 +57,15 @@ public class HUDController
         }
         else
         {
-            player_huds.get(player).add(new TextComponent("\n"));
+            player_huds.get(player).add(Component.literal("\n"));
         }
         player_huds.get(player).add(hudMessage);
     }
-    public static void clear_player(Player player)
+
+    public static void clearPlayer(ServerPlayer player)
     {
-        FriendlyByteBuf packetData = new FriendlyByteBuf(Unpooled.buffer()).writeComponent(new TextComponent("")).writeComponent(new TextComponent(""));
-        ClientboundTabListPacket packet = new ClientboundTabListPacket(packetData);
-        //((PlayerListHeaderS2CPacketMixin)packet).setHeader(new LiteralText(""));
-        //((PlayerListHeaderS2CPacketMixin)packet).setFooter(new LiteralText(""));
-        ((ServerPlayer)player).connection.send(packet);
+        ClientboundTabListPacket packet = new ClientboundTabListPacket(Component.literal(""), Component.literal(""));
+        player.connection.send(packet);
     }
 
 
@@ -83,7 +77,7 @@ public class HUDController
         player_huds.clear();
 
         server.getPlayerList().getPlayers().forEach(p -> {
-            BaseComponent scarpetFOoter = scarpet_footers.get(p.getScoreboardName());
+            Component scarpetFOoter = scarpet_footers.get(p.getScoreboardName());
             if (scarpetFOoter != null) HUDController.addMessage(p, scarpetFOoter);
         });
 
@@ -92,27 +86,20 @@ public class HUDController
 
         if (LoggerRegistry.__mobcaps)
             LoggerRegistry.getLogger("mobcaps").log((option, player) -> {
-                ResourceKey<Level> dim = player.level.dimension(); //getDimType
-                switch (option)
-                {
-                    case "overworld":
-                        dim = Level.OVERWORLD; // OW
-                        break;
-                    case "nether":
-                        dim = Level.NETHER; // nether
-                        break;
-                    case "end":
-                        dim = Level.END; // end
-                        break;
-                }
-                return new BaseComponent[]{SpawnReporter.printMobcapsForDimension(server.getLevel(dim), false).get(0)};
+                ResourceKey<Level> dim = switch (option) {
+                    case "overworld" -> Level.OVERWORLD;
+                    case "nether" -> Level.NETHER;
+                    case "end" -> Level.END;
+                    default -> player.level().dimension();
+                };
+                return new Component[]{SpawnReporter.printMobcapsForDimension(server.getLevel(dim), false).get(0)};
             });
 
         if(LoggerRegistry.__counter)
             LoggerRegistry.getLogger("counter").log((option)->send_counter_info(server, option));
 
         if (LoggerRegistry.__packets)
-            LoggerRegistry.getLogger("packets").log(()-> packetCounter());
+            LoggerRegistry.getLogger("packets").log(HUDController::packetCounter);
 
         // extensions have time to pitch in.
         HUDListeners.forEach(l -> l.accept(server));
@@ -121,39 +108,45 @@ public class HUDController
         if (force!= null) targets.addAll(force);
         for (ServerPlayer player: targets)
         {
-            FriendlyByteBuf packetData = new FriendlyByteBuf(Unpooled.buffer()).
-                    writeComponent(scarpet_headers.getOrDefault(player.getScoreboardName(), new TextComponent(""))).
-                    writeComponent(Messenger.c(player_huds.getOrDefault(player, Collections.emptyList()).toArray(new Object[0])));
-            ClientboundTabListPacket packet = new ClientboundTabListPacket(packetData);
-
-            //PlayerListHeaderS2CPacket packet = new PlayerListHeaderS2CPacket();
-            //((PlayerListHeaderS2CPacketMixin)packet).setHeader(scarpet_headers.getOrDefault(player.getEntityName(), new LiteralText("")));
-            //((PlayerListHeaderS2CPacketMixin)packet).setFooter(Messenger.c(player_huds.getOrDefault(player, Collections.emptyList()).toArray(new Object[0])));
+            ClientboundTabListPacket packet = new ClientboundTabListPacket(
+                        scarpet_headers.getOrDefault(player.getScoreboardName(), Component.literal("")),
+                        Messenger.c(player_huds.getOrDefault(player, List.of()).toArray(new Object[0]))
+                    );
             player.connection.send(packet);
         }
     }
-    private static BaseComponent [] send_tps_display(MinecraftServer server)
+    private static Component [] send_tps_display(MinecraftServer server)
     {
-        double MSPT = Mth.average(server.tickTimes) * 1.0E-6D;
-        double TPS = 1000.0D / Math.max((TickSpeed.time_warp_start_time != 0)?0.0:TickSpeed.mspt, MSPT);
-        String color = Messenger.heatmap_color(MSPT,TickSpeed.mspt);
-        return new BaseComponent[]{Messenger.c(
+        OptionalDouble averageTPS = Arrays.stream(server.tickTimes).average();
+        ServerTickRateManager trm = ((MinecraftServerInterface)server).getTickRateManager();
+        if (averageTPS.isEmpty())
+        {
+            return new Component[]{Component.literal("No TPS data available")};
+        }
+        double MSPT = Arrays.stream(server.tickTimes).average().getAsDouble() * 1.0E-6D;
+        double TPS = 1000.0D / Math.max(trm.isInWarpSpeed()?0.0:trm.mspt(), MSPT);
+        if (trm.gameIsPaused()) {
+            TPS = 0;
+        }
+        String color = Messenger.heatmap_color(MSPT,trm.mspt());
+        return new Component[]{Messenger.c(
                 "g TPS: ", String.format(Locale.US, "%s %.1f",color, TPS),
                 "g  MSPT: ", String.format(Locale.US,"%s %.1f", color, MSPT))};
     }
 
-    private static BaseComponent [] send_counter_info(MinecraftServer server, String color)
+    private static Component[] send_counter_info(MinecraftServer server, String colors)
     {
-        List <BaseComponent> res = new ArrayList<>();
-        Arrays.asList(color.split(",")).forEach(c ->{
-            HopperCounter counter = HopperCounter.getCounter(c);
+        List <Component> res = new ArrayList<>();
+        for (String color : colors.split(","))
+        {
+            HopperCounter counter = HopperCounter.getCounter(color);
             if (counter != null) res.addAll(counter.format(server, false, true));
-        });
-        return res.toArray(new BaseComponent[0]);
+        }
+        return res.toArray(new Component[0]);
     }
-    private static BaseComponent [] packetCounter()
+    private static Component [] packetCounter()
     {
-        BaseComponent [] ret =  new BaseComponent[]{
+        Component [] ret =  new Component[]{
                 Messenger.c("w I/" + PacketCounter.totalIn + " O/" + PacketCounter.totalOut),
         };
         PacketCounter.reset();
